.metadata/.plugins/org.eclipse.cdt.ui/fpu_test.build.log
12:13:22 **** Incremental Build of configuration Debug for project fpu_test ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -c -I../Inc -I"C:/Users/user/Desktop/f401re documents/DSP/0_test/chip_headers/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -c -I../Inc -I"C:/Users/user/Desktop/f401re documents/DSP/0_test/chip_headers/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -c -I../Inc -I"C:/Users/user/Desktop/f401re documents/DSP/0_test/chip_headers/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
In file included from ../Src/main.c:20:
C:/Users/user/Desktop/f401re documents/DSP/0_test/chip_headers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:176:2: error: #error "Please select first the target STM32F4xx device used in your application (in stm32f4xx.h file)"
  176 | #error "Please select first the target STM32F4xx device used in your application (in stm32f4xx.h file)"
      |  ^~~~~
../Src/main.c: In function 'main':
../Src/main.c:30:9: error: 'RCC' undeclared (first use in this function)
   30 |         RCC->AHB1ENR |= GPIOAEN;
      |         ^~~
../Src/main.c:30:9: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:30:25: error: 'GPIOAEN' undeclared (first use in this function)
   30 |         RCC->AHB1ENR |= GPIOAEN;
      |                         ^~~~~~~
../Src/main.c:31:9: error: 'GPIOA' undeclared (first use in this function)
   31 |         GPIOA->MODER |= (1<<10);
      |         ^~~~~
../Src/main.c:41:23: error: 'LED_PIN' undeclared (first use in this function)
   41 |         GPIOA->ODR ^= LED_PIN;
      |                       ^~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

12:13:22 Build Failed. 7 errors, 0 warnings. (took 256ms)

